--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosiades</a>
+        <a href="#">Curiosidades</a>
         <a href="#">Fale conosco</a>
         </nav>
     <main>
